--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -34,6 +34,6 @@ jobs:
         port: ${{ secrets.VM_SSH_PORT }}
         script: |
           cd /home/coalkid/docker
-          docker-compose down
-          docker-compose pull
-          docker-compose up -d
+          sudo docker-compose down
+          sudo docker-compose pull
+          sudo docker-compose up -d
