--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -24,6 +24,16 @@ jobs:
       run: |
         docker build -t dockerzwol.azurecr.io/myreact:latest .
         docker push dockerzwol.azurecr.io/myreact:latest
+   
+    - name: Copy Docker Compose file to VM
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.VM_SSH_HOST }}
+        username: ${{ secrets.VM_SSH_USER }}
+        key: ${{ secrets.VM_SSH_KEY }}
+        port: ${{ secrets.VM_SSH_PORT }}
+        source: ./docker-compose.yml
+        target: /home/coalkid/docker/docker-compose.yml
         
     - name: SSH into VM and update Docker Compose
       uses: appleboy/ssh-action@master
