--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -37,8 +37,8 @@ jobs:
         username: ${{ secrets.VM_SSH_USER }}
         key: ${{ secrets.VM_SSH_KEY }}
         port: ${{ secrets.VM_SSH_PORT }}
-        source: ./docker-compose.yml
-        target: /home/coalkid/docker/
+        source: ./docker-compose.yaml
+        target: /home/coalkid/docker/docker-compose.yaml
         
     - name: SSH into VM and update Docker Compose
       uses: appleboy/ssh-action@master
