--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -38,8 +38,8 @@ jobs:
         username: ${{ secrets.VM_SSH_USER }}
         key: ${{ secrets.VM_SSH_KEY }}
         port: ${{ secrets.VM_SSH_PORT }}
-        source: ./docker-compose.yaml
-        target: /home/coalkid/docker/docker-compose.yaml
+        source: ./docker-compose.yml
+        target: /home/coalkid/docker/docker-compose.yml
         
     - name: SSH into VM and update Docker Compose
       uses: appleboy/ssh-action@master
