--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -39,7 +39,7 @@ jobs:
         key: ${{ secrets.VM_SSH_KEY }}
         port: ${{ secrets.VM_SSH_PORT }}
         source: ./docker-compose.yml
-        target: /home/coalkid/docker/docker-compose.yml
+        target: /home/coalkid/docker/
         
     - name: SSH into VM and update Docker Compose
       uses: appleboy/ssh-action@master
