--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -38,7 +38,7 @@ jobs:
         username: ${{ secrets.VM_SSH_USER }}
         key: ${{ secrets.VM_SSH_KEY }}
         port: ${{ secrets.VM_SSH_PORT }}
-        source: "./docker-compose.yml"
+        source: "docker-compose.yml"
         target: "/home/coalkid/docker/"
         
     - name: SSH into VM and update Docker Compose
