--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -31,6 +31,10 @@ jobs:
     runs-on: ubuntu-latest
    
     steps:
+
+    - name: check dir
+      run: ls -al .
+    
     - name: Copy Docker Compose file to VM
       uses: appleboy/scp-action@master
       with:
@@ -40,7 +44,9 @@ jobs:
         port: ${{ secrets.VM_SSH_PORT }}
         source: "docker-compose.yml"
         target: "/home/coalkid/docker/"
-        
+    
+    
+      
     - name: SSH into VM and update Docker Compose
       uses: appleboy/ssh-action@master
       with:
