--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -43,7 +43,7 @@ jobs:
         key: ${{ secrets.VM_SSH_KEY }}
         port: ${{ secrets.VM_SSH_PORT }}
         source: "docker-compose.yml"
-        target: "/home/coalkid/docker/"
+        target: "/home/coalkid/docker/docker-compose.yml"
     
     
       
