--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -31,7 +31,10 @@ jobs:
     runs-on: ubuntu-latest
    
     steps:
-
+    
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+      
     - name: check dir
       run: |
         ls -al .
