--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -49,7 +49,7 @@ jobs:
         key: ${{ secrets.VM_SSH_KEY }}
         port: ${{ secrets.VM_SSH_PORT }}
         source: "docker-compose.yml"
-        target: "/home/coalkid/docker/docker-compose.yml"
+        target: "/home/coalkid/docker"
     
     
       
