--- a/.github/workflows/registry-push.yml
+++ b/.github/workflows/registry-push.yml
@@ -22,25 +22,26 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t dockerzwol.azurecr.io/myreact:latest .
-        docker push dockerzwol.azurecr.io/myreact:latest
+        echo "TAG=$(date +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_ENV
+        docker build -t dockerzwol.azurecr.io/myreact:${{ env.TAG }} .
+        docker push dockerzwol.azurecr.io/myreact:${{ env.TAG }}
 
-        
+
   ssh-actions:
     needs: build-and-push
     runs-on: ubuntu-latest
-   
+
     steps:
-    
+
     - name: Checkout Repository
       uses: actions/checkout@v2
-      
+
     - name: check dir
       run: |
         ls -al .
         pwd
-          
-    
+
+
     - name: Copy Docker Compose file to VM
       uses: appleboy/scp-action@master
       with:
@@ -50,9 +51,9 @@ jobs:
         port: ${{ secrets.VM_SSH_PORT }}
         source: "docker-compose.yml"
         target: "/home/coalkid/docker"
-    
-    
-      
+
+
+
     - name: SSH into VM and update Docker Compose
       uses: appleboy/ssh-action@master
       with:
